dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
+/* Light mode */
+html {
+  background-color: #ffffff; /* Light background */
+  color: #171717; /* Dark text */
+}
 
+/* Dark mode styles */
+html.dark {
+  background-color: #171717; /* Dark background */
+  color: #f1f1f1; /* Light text */
+}
 html {
   scroll-behavior: smooth;
 }
